@@ -4,8 +4,10 @@
 # $Revision$
 
 use ExtUtils::testlib;
-use Test::More tests => 57;
+use Test::More tests => 74;
+use Test::Exception ;
 use Config::Model;
+use Data::Dumper ;
 
 use warnings;
 no warnings qw(once);
@@ -25,9 +27,32 @@ Log::Log4perl->easy_init($arg =~ /l/ ? $TRACE: $WARN);
 
 ok(1,"compiled");
 
+# test mega regexp, 'x' means undef
+my @regexp_test = (
+		   [ 'a'		,  [qw/a x x x x/	] ],
+		   [ 'a=b'		,  [qw/a x x = b/	] ],
+		   [ 'a.=b'		,  [qw/a x x .= b/	] ],
+		   [ 'a="b=c"'		,  [qw/a x x = b=c/	] ],
+		   [ 'a="b=\"c\""'	,  [qw/a x x = b="c"/	] ],
+		   [ 'a:b=c'		,  [qw/a : b = c/	] ],
+		   [ 'a:"b\""="\"c"'    ,  [qw/a : b" = "c/	] ],
+		   [ 'a=~/b.*/'		,  [qw!a =~ /b.*/ x x!	] ],
+		   [ 'a=~/b.*/.="\"a"'  ,  [qw!a =~ /b.*/ .= "a!] ],
+		   [ 'a=b,c,d'          ,  [qw/a x x =/, 'b,c,d'] ],
+		   [ 'm=a,"a b "'       ,  [qw/m x x =/, 'a,"a b "']],
+ ) ;
+
+foreach my $subtest (@regexp_test) {
+    my ($cmd, $ref) = @$subtest ;
+    my $res = Config::Model::Loader::_split_cmd($cmd) ;
+    #print Dumper $res,"\n";
+    foreach (@$ref) { $_ = undef if  $_ eq 'x' ;} 
+    is_deeply($res,$ref, "test _split_cmd with '$cmd'") ;
+}
+
 my $inst = $model->instance (root_class_name => 'Master', 
-			     model_file => 't/big_model.pm',
-			     instance_name => 'test1');
+                 model_file => 't/big_model.pm',
+                 instance_name => 'test1');
 ok($inst,"created dummy instance") ;
 
 my $root = $inst -> config_root ;
@@ -35,7 +60,7 @@ my $root = $inst -> config_root ;
 # check with embedded \n
 my $step = qq!std_id:ab X=Bv -\na_string="titi and\ntoto" !;
 ok( $root->load( step => $step, permission => 'intermediate' ),
-  "load '$step'");
+  "load steps with embedded \\n");
 is( $root->fetch_element('a_string')->fetch, "titi and\ntoto",
   "check a_string");
 
@@ -64,17 +89,20 @@ ok( $root->load( step => $step, permission => 'intermediate' ),
   "load '$step'");
 
 is_deeply([ $root->fetch_element('std_id')->get_all_indexes ],
-	  [ ' b  c ', 'a b','ab','bc'],
-	  "check indexes");
+      [ ' b  c ', 'a b','ab','bc'],
+      "check indexes");
 
 $step = 'std_id:ab ZZX=Bv - std_id:bc X=Bv';
-eval {$root->load( step => $step, permission => 'intermediate' ); };
-ok($@,"load wrong '$step'");
-print "normal error:\n", $@, "\n" if $trace;
+throws_ok {$root->load( step => $step, permission => 'intermediate' );}
+  "Config::Model::Exception::UnknownElement", "load wrong '$step'";
 
 $step = 'lista=a,b,c,d olist:0 X=Av - olist:1 X=Bv - listb=b,c,d,,f,"",h,0';
-ok( $root->load( step => $step, permission => 'intermediate' ),
-  "load '$step'");
+throws_ok { $root->load( step => $step, permission => 'intermediate');} 
+  qr/comma/, "load wrong '$step'";
+
+$step = 'listb=b,c,d,f,"",h,0';
+ok ( $root->load( step => $step, permission => 'intermediate'),
+     "load '$step'");
 
 # perform some checks
 my $olist = $root->fetch_element('olist') ;
@@ -104,7 +132,7 @@ map {
     } (0 .. $#expect) ;
 
 my $listb = $root->fetch_element('listb') ;
-@expect = (qw/b c d/,undef,'f','','h','0');
+@expect = (qw/b c d/,'f','','h','0');
 map {
     is($listb->fetch_with_id($_)->fetch, $expect[$_], 
        "check listb element $_ content") ;
@@ -128,17 +156,17 @@ map {
     } (0 .. 4) ;
 
 # set the value of the previous object
-$step = 'std_id:f/o/o:b.ar X=Bv' ;
+$step = 'std_id:"f/o/o:b.ar" X=Bv' ;
 ok( $root->load( step => $step, ), "load : '$step'");
 is_deeply( [sort $root->fetch_element('std_id')->get_all_indexes ],
-	   [' b  c ', 'a b',qw!ab bc f/o/o:b.ar!],
-	   "check result after load '$step'" );
+       [' b  c ', 'a b',qw!ab bc f/o/o:b.ar!],
+       "check result after load '$step'" );
 
 $step = 'hash_a:a=z hash_a:b=z2 hash_a:"a b "="z 1"' ;
 ok( $root->load( step => $step, ), "load : '$step'");
 is_deeply( [sort $root->fetch_element('hash_a')->get_all_indexes ],
-	   ['a','a b ','b'],
-	   "check result after load '$step'" );
+       ['a','a b ','b'],
+       "check result after load '$step'" );
 is($root->fetch_element('hash_a')->fetch_with_id('a')->fetch,'z',
    'check result');
 
@@ -169,3 +197,21 @@ is($root->fetch_element('lista')->fetch_with_id(1)->fetch ,
 $elt = $root->fetch_element('hash_a')->fetch_with_id('a b ');
 is($elt->fetch,undef, "test hash value loaded by '$step'");
 
+# test append mode
+$root->load('a_string.=c');
+is($root->fetch_element_value('a_string'), 'a "b" c', "test append on list");
+
+$root->load('lista:0.=" b c"');
+is($root->fetch_element('lista')->fetch_with_id(0)->fetch ,
+   , 'a b c', "test append on leaf");
+
+$root->load('hash_a:b.=" z3"');
+is($root->fetch_element('hash_a')->fetch_with_id('b')->fetch ,
+   , 'z2 z3', "test append on hash");
+
+# test loop mode
+
+$root->load('std_id=~/^\w+$/ DX=Bv - int_v=9') ;
+is($root->grab_value('std_id:ab DX'),'Bv',"check looped assign 1") ;
+is($root->grab_value('std_id:bc DX'),'Bv',"check looped assign 2") ;
+isnt($root->grab_value('std_id:"a b" DX'),'Bv',"check out of loop left alone") ;
